<resources>
    <string name="app_name">Draft</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="email">Email</string>
    <string name="project">Project Idea</string>
    <string name="enter">Enter</string>
    <string name="remove_partner">Remove Partner</string>
    <string name="status">Status</string>
    <string name="form">Form</string>
    <string name="imgView_toolbar">imageView_toolbar</string>
    <string name="toolbar">toolbar</string>
    <string name="video">video</string>
    <string name="teacher">Teacher</string>
    <string name="student">Student</string>
    <string name="username">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="remember_me">Remember me</string>
    <string name="create">Sign-up</string>
    <string name="oceanside">Oceanside High School</string>
    <string name="click_continue">Continue</string>
    <string name="first">First choice</string>
    <string name="second">Second choice</string>
    <string name="third">Third choice</string>
    <string name="confirm">Confirm password</string>
    <string name="next">Next</string>
    <string name="instructions">Your top three picks for mentor:</string>
    <string name="create_account">Create account</string>
    <string name="show_pass">Show password</string>
    <string name="add_partner">Add partner</string>
    <string name="done">Done</string>
    <string name="review_account">Review Account</string>
    <string name="number_of_classes">Number of classes</string>
    <string name="unique_identifier">Unique identifier</string>
    <string name="draft">Draft</string>
    <string name="roster">Current Roster</string>
    <string name="currently">Accounts are currently being created</string>
    <string name="accept">Accept</string>
    <string name="deny">Deny</string>
    <string name="send_choices">Send choices</string>
    <string name="notified">You will be notified when account creation is available</string>
    <string name="being">Accounts are being created</string>
    <string name="completed">The draft is complete</string>
    <string name="no_one_to_draft">There\'s no one to draft this round, press \"send choices\" to move on.</string>
    <string name="leftover">Leftover Students</string>
    <string name="handling">Handling leftover students</string>
    <string name="mentor">Mentor choices</string>
    <string name="send">Send</string>
    <string name="enter_message">Enter message</string>
    <string name="draft_progress">DRAFT PROGRESS</string>
    <string name="round">Round 1</string>
    <string name="profile">YOUR PROFILE</string>
    <string name="student_name">Student Name</string>
    <string name="emailRow">Email:</string>
    <string name="exampleEmail">example@gmail.com</string>
    <string name="projectRow">Project:</string>
    <string name="exampleProject">The Moon is a barren, rocky world without air and water. It has dark lava plain on its surface. The Moon is filled with craters. It has no light of its own. It gets its light from the Sun.</string>
    <string name="partnerRow">Partner:</string>
    <string name="mentor_picks">YOUR MENTOR PICKS</string>
    <string name="mentorName">Mentor Name</string>
    <string name="your_mentor">YOUR MENTOR</string>
    <string name="teacher_name">Teacher Name</string>
    <string name="classRow">Class Count:</string>
    <string name="exampleClassCount">2</string>
    <string name="DRAFT">DRAFT</string>
    <string name="exampleRoster">10 students</string>
    <string name="rosterButton">Roster</string>
    <string name="draft_students">Draft Students</string>
    <string name="exampleDraft">5 slots available</string>
    <string name="leftoverButton">Claim</string>
    <string name="leftoverExample">Students need mentors</string>
    <string name="empty">Nobody in Roster</string>
    <string name="all_done">Hit Send!</string>
</resources>
