<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:id="@+id/scrollView_teacherCreate"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorAccent">
        <RelativeLayout
            android:layout_width="275dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|top"
            android:elevation="20dp"
            android:focusable="true"
            android:focusableInTouchMode="true">
            <EditText
                android:layout_marginTop="100dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editText_last_name"
                android:hint="@string/last_name"
                android:layout_centerHorizontal="true"
                android:inputType="text"
                android:transitionName="top_editText"
                android:windowSoftInputMode="stateHidden"
                android:maxLines="1"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editText_first_name"
                android:hint="@string/first_name"
                android:layout_below="@id/editText_last_name"
                android:layout_centerHorizontal="true"
                android:transitionName="bottom_editText"
                android:inputType="text"
                android:maxLines="1"
                android:layout_marginBottom="30dp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editText_email"
                android:inputType="textEmailAddress"
                android:hint="@string/email"
                android:layout_below="@id/editText_first_name"
                android:maxLines="1"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editText_pass"
                android:inputType="textPassword"
                android:fontFamily="sans-serif"
                android:hint="@string/password"
                android:layout_below="@id/editText_email"
                android:maxLines="1"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editText_pass_confirm"
                android:inputType="textPassword"
                android:fontFamily="sans-serif"
                android:hint="@string/confirm"
                android:layout_below="@id/editText_pass"
                android:layout_marginBottom="30dp"
                android:maxLines="1"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editText_numberClasses"
                android:inputType="number"
                android:fontFamily="sans-serif"
                android:hint="@string/number_of_classes"
                android:layout_below="@id/editText_pass_confirm"
                android:maxLines="1"
                android:layout_marginBottom="30dp"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/button_create_account"
                android:text="@string/create_account"
                android:layout_below="@id/editText_numberClasses"
                android:backgroundTint="@color/colorBackground"
                android:transitionName="button"
                android:layout_marginBottom="44dp"/>
        </RelativeLayout>
    </ScrollView>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            android:transitionName="@string/toolbar"/>
    </RelativeLayout>
</FrameLayout>