<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:src="@drawable/backdrop"/>
    <ScrollView
        android:id="@+id/scrollView_studentCreate"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="275dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|top"
            android:elevation="20dp"
            android:focusable="true"
            android:focusableInTouchMode="true">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editText_first_name"
                android:hint="@string/first_name"
                android:layout_centerHorizontal="true"
                android:transitionName="top_editText"
                android:windowSoftInputMode="stateHidden"
                android:layout_marginTop="100dp"
                android:inputType="text"
                android:maxLines="1"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/last_name"
                android:id="@+id/editText_last_name"
                android:layout_below="@id/editText_first_name"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="20dp"
                android:transitionName="bottom_editText"
                android:maxLines="1"/>
            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:id="@+id/imageView_contact"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/editText_last_name"
                android:transitionName="contact"
                android:src="@drawable/contact"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView_add_partner"
                android:text="@string/add_partner"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/imageView_contact"
                android:maxLines="1"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editText_email"
                android:inputType="textEmailAddress"
                android:hint="@string/email"
                android:layout_below="@id/textView_add_partner"
                android:maxLines="1"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editText_pass"
                android:inputType="textPassword"
                android:fontFamily="sans-serif"
                android:hint="@string/password"
                android:layout_below="@id/editText_email"
                android:maxLines="1"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editText_pass_confirm"
                android:inputType="textPassword"
                android:fontFamily="sans-serif"
                android:hint="@string/confirm"
                android:layout_below="@id/editText_pass"
                android:layout_marginBottom="30dp"
                android:maxLines="1"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/instructions"
                android:textSize="19sp"
                android:id="@+id/textView_instructions"
                android:layout_below="@id/editText_pass_confirm"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"/>
            <Spinner
                android:background="@drawable/apptheme_spinner_default_holo_light"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spinner_first"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="20dp"
                android:layout_below="@id/textView_instructions"
                android:gravity="center"/>
            <Spinner
                android:background="@drawable/apptheme_spinner_default_holo_light"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spinner_second"
                android:layout_below="@id/spinner_first"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"/>
            <Spinner
                android:background="@drawable/apptheme_spinner_default_holo_light"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spinner_third"
                android:layout_below="@id/spinner_second"
                android:layout_marginBottom="40dp"
                android:layout_marginTop="10dp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/project"
                android:inputType="textMultiLine"
                android:id="@+id/editText_project"
                android:layout_below="@id/spinner_third"
                android:layout_marginBottom="30dp"
                android:maxLines="5"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/button_create_account"
                android:text="@string/create_account"
                android:layout_below="@id/editText_project"
                android:backgroundTint="@color/colorBackground"
                android:transitionName="button"
                android:layout_marginBottom="44dp"/>
        </RelativeLayout>
    </ScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            android:transitionName="@string/toolbar" />
    </RelativeLayout>
</FrameLayout>