<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent">
    <RelativeLayout
        android:layout_width="275dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:animateLayoutChanges="true">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorBackground"
            android:id="@+id/button_draft"
            android:text="@string/draft"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorBackground"
            android:id="@+id/button_roster"
            android:text="@string/roster"
            android:layout_below="@id/button_draft"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorBackground"
            android:id="@+id/button_leftover"
            android:text="@string/leftover"
            android:layout_below="@id/button_roster"
            android:visibility="gone"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            android:transitionName="@string/toolbar"/>
        <com.akexorcist.roundcornerprogressbar.IconRoundCornerProgressBar
            android:layout_width="235dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:id="@+id/progressBar_draft"
            android:layout_centerHorizontal="true"
            app:rcIconSize="25dp"
            app:rcBackgroundPadding="5dp"
            app:rcProgressColor="@color/colorBackground"
            app:rcSecondaryProgressColor="@color/colorAccent"
            app:rcBackgroundColor="@color/colorLightest"
            app:rcIconBackgroundColor="@color/colorPrimary"
            app:rcIconSrc="@drawable/ic_action_name"
            app:rcIconPadding="5dp"
            android:layout_below="@id/toolbar"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/progressBar_draft"
            android:id="@+id/textView_draft"
            android:layout_marginTop="10dp"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:id="@+id/button_oceanside"
            android:drawableLeft="@drawable/oceanside_high_school"
            android:text="@string/oceanside"
            android:background="@android:color/transparent"
            android:fontFamily="sans-serif"/>
    </RelativeLayout>
</FrameLayout>