<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <ImageView
            android:src="@drawable/blurred_background"
            android:scaleType="fitXY"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/imageView_login"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:transitionName="image"
            android:background="@color/colorBackground"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            android:transitionName="@string/toolbar"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:id="@+id/button_oceanside"
            android:drawableLeft="@drawable/oceanside_high_school"
            android:text="@string/oceanside"
            android:background="@android:color/transparent"
            android:fontFamily="sans-serif"
            android:transitionName="oceanside"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="275dp"
        android:layout_height="200dp"
        android:layout_gravity="center">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:id="@+id/editText_username"
            android:hint="@string/username"
            android:layout_centerHorizontal="true"
            android:transitionName="top_editText"/>
        <EditText
            android:layout_width="235dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:layout_below="@id/editText_username"
            android:id="@+id/editText_password"
            android:hint="@string/password"
            android:fontFamily="sans-serif"
            android:transitionName="bottom_editText"/>
        <ToggleButton
            android:layout_width="30dp"
            android:layout_height="27dp"
            android:layout_marginTop="2dp"
            android:padding="22dp"
            android:textOn=""
            android:textOff=""
            android:id="@+id/button_show"
            android:layout_toEndOf="@id/editText_password"
            android:layout_below="@id/editText_username"
            android:background="@drawable/check"
            android:layout_marginBottom="45dp"/>
        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_below="@id/editText_password"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true">
            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:backgroundTint="@color/colorBackground"
                android:id="@+id/button_login"
                android:transitionName="button"/>
            <Button
                android:layout_weight="0"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorBackground"
                android:text="@string/create"
                android:id="@+id/button_create"/>
        </LinearLayout>
    </RelativeLayout>
</FrameLayout>