<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:src="@drawable/backdrop"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            android:transitionName="@string/toolbar"/>
        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/imageView_contact"
            android:transitionName="contact"
            android:layout_marginTop="30dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/toolbar"
            android:layout_marginBottom="30dp"
            android:elevation="5dp"
            android:src="@drawable/contact"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:background="@android:color/white"
            android:elevation="5dp"
            android:layout_gravity="bottom"
            android:id="@+id/layout"
            android:layout_below="@id/imageView_contact">
            <RelativeLayout
                android:layout_width="275dp"
                android:layout_height="385dp"
                android:layout_gravity="center"
                android:layout_centerHorizontal="true">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/editText_first_name"
                    android:hint="@string/first_name"
                    android:layout_centerHorizontal="true"
                    android:inputType="text"
                    android:layout_marginTop="50dp"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/editText_last_name"
                    android:hint="@string/last_name"
                    android:layout_below="@id/editText_first_name"
                    android:layout_marginBottom="50dp"
                    android:inputType="text"
                    android:layout_centerHorizontal="true"/>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/button_done"
                    android:transitionName="button"
                    android:layout_below="@id/editText_last_name"
                    android:backgroundTint="@color/colorBackground"
                    android:layout_centerHorizontal="true"
                    android:text="@string/done"/>
            </RelativeLayout>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                android:id="@+id/button_oceanside"
                android:drawableLeft="@drawable/oceanside_high_school"
                android:text="@string/oceanside"
                android:background="@android:color/transparent"
                android:fontFamily="sans-serif"/>
        </RelativeLayout>
    </RelativeLayout>
</FrameLayout>