<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/imageView_intro"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:transitionName="image"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:layout_width="200dp"
            android:layout_height="120dp"
            android:id="@+id/imageView_draft"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="100dp"/>
        <Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            android:titleTextColor="@android:color/black"
            android:transitionName="@string/toolbar"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:id="@+id/button_oceanside"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/oceanside_high_school"
            android:text="@string/oceanside"
            android:fontFamily="sans-serif"
            android:transitionName="oceanside"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="275dp"
        android:layout_height="200dp"
        android:layout_gravity="center">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/teacher"
            android:layout_centerHorizontal="true"
            android:id="@+id/button_teacher"
            android:backgroundTint="@color/colorBackground"
            android:transitionName="button"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/student"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/button_teacher"
            android:id="@+id/button_student"
            android:backgroundTint="@color/colorBackground"
            android:transitionName="button"/>
    </RelativeLayout>
</FrameLayout>